<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single">
        <item
            android:checkable="true"
            android:id="@+id/nbu"
            android:icon="@drawable/ic_nbu_menu"
            android:title="@string/nbu_exchange" />
        <item
            android:checkable="true"
            android:id="@+id/organization"
            android:icon="@drawable/ic_money"
            android:title="@string/organization_exchange" />
    </group>

    <item android:title="@string/language">
        <menu
            android:id="@+id/language"
            android:checkableBehavior="all">
            <item
                android:id="@+id/ua_lang"
                android:icon="@drawable/ic_ukraine_flag"
                android:title="Українська" />
            <item
                android:id="@+id/en_lang"
                android:icon="@drawable/ic_usa_flag"
                android:title="English" />
        </menu>
    </item>

    <item
        android:visible="false"
        android:checkable="false"
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_menu"
        android:title="@string/action_settings" />


</menu>